testsuite/tests/rename/should_fail/T15539.stderr

T15539.hs:6:13: error:
    Variable not in scope: baz
    Suggested fix:
      Perhaps use one of these: ‘bam’ (line 17), ‘bar’ (line 15)
